# matchmaker

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  HELLO.md  LICENSE  PLAN.md  README.md  TODO.md  build.rs  dist-workspace.toml  dprint.json  flake.nix  install.ps1  install.sh  justfile  package-lock.json  release-plz.toml
.github/workflows/: build-release.yml  publish.yml  release-plz.yml  release-plz.yml.d  release.yml
assets/: config.toml  dev.toml
assets/completions/: _mm  _mm.ps1  mm.bash  mm.fish
examples/: basic.rs  noninteractive.rs  pick_1.rs  ripgrep.rs
match-maker/: README.md
match-maker-derive/: Cargo.toml
match-maker/assets/: config.toml
match-maker/examples/: noninteractive.rs
match-maker/src/: action.rs  errors.rs  lib.rs  matchmaker.rs  selector.rs  tui.rs
match-maker/src/ui/: input.rs  results.rs
match-maker/src/utils/: mod.rs
matchmaker-cli/: Cargo.toml  README.md  build.rs
matchmaker-cli/assets/: config.toml  config.win.toml  dev.toml  dev.win.toml  override.toml  rg.toml  rg.win.toml  test.toml  win.config.toml  win.dev.toml
matchmaker-cli/assets/completions/: _mm  _mm.ps1  mm.bash  mm.fish
matchmaker-cli/assets/docs/: Other.md  binds.md  options.md  other.md  template.md
matchmaker-cli/assets/presets/: .gitignore  cargo-rx.toml  csv.toml  gg.toml  hosts.toml  man.toml  ps.toml  rg.toml  rg.win.toml  ssh.toml  win.rg.toml
matchmaker-cli/assets/presets/dict/: README.md  build_emoji.sh  build_unicode.sh  emoji.toml  emoji.zst  en.toml  english.zst  extract_dictionary.py  main.toml  unicode.toml  unicode.zst
matchmaker-cli/assets/presets/docker/: README.md  base.toml  compose.toml  composer.sh  containers.sh  containers.toml  dispatcher.sh  images.toml  mount.toml  network.toml  projects.sh  volumes.toml
matchmaker-cli/assets/presets/g/: g.toml  rs.toml  sw.toml
matchmaker-cli/assets/presets/git/: base.toml  browse.toml  grep.toml  restore.toml  stage.toml  status.toml  switch.toml
matchmaker-cli/assets/presets/kube/: base.toml  pods.toml
matchmaker-cli/assets/presets/linux/: README.md  prefpanes.toml
matchmaker-cli/assets/presets/macos/: README.md  extensions.csv  prefpanes.toml  render_symbol  render_symbol.swift  services.toml
matchmaker-cli/assets/presets/misc/: tabby-select.toml
matchmaker-cli/assets/presets/obsidian/: .gitignore  README.md  _ob-insert  ob-files  ob-open  ob-vaults  vaults.toml
matchmaker-cli/assets/presets/patches/: git-status.toml
matchmaker-cli/assets/presets/pi/: README.md  export-session.mjs  session_stats.py  sessions.toml
matchmaker-cli/assets/presets/ssh/: hosts.toml  keys.toml  known.toml  tailscale.toml
matchmaker-cli/assets/presets/switcher/: .gitignore  README.md  linux.main.toml  list  list.sh  list.swift  macos.main.toml  switch  switch.sh  switch.swift
matchmaker-cli/assets/presets/todo/: README.md  pods.toml
matchmaker-cli/assets/presets/unicode/: README.md  build_unicode.py  build_unicode.sh  emoji_compat.zst  main.toml  unicode.zst
matchmaker-cli/src/: _log.rs  action.rs  clap.rs  config.rs  formatter.rs  logger.rs  main.rs  parse.rs  paths.rs  register.rs  setup.rs  start.rs  utils.rs
matchmaker-cli/wix/: main.wxs
matchmaker-lib/: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TODO.md
matchmaker-lib/examples/: basic.rs  pick_1.rs  ripgrep.rs
matchmaker-lib/src/: action.rs  aliases.rs  binds.rs  collections.rs  config.rs  config_types.rs  errors.rs  event.rs  lib.rs  matchmaker.rs  message.rs  mode_filter.rs  noninteractive.rs  selector.rs  tui.rs
matchmaker-lib/src/matchmaker/: config_mm.rs  handlers.rs
matchmaker-lib/src/nucleo/: injector.rs  mod.rs  query.rs  render_item.rs  variants.rs  worker.rs
matchmaker-lib/src/preview/: mod.rs  previewer.rs  view.rs
matchmaker-lib/src/render/: dynamic.rs  mod.rs  state.rs
matchmaker-lib/src/ui/: display.rs  input.rs  mod.rs  overlay.rs  preview.rs  results.rs  status.rs  utils.rs
matchmaker-lib/src/ui/results/: render.rs  update.rs  widths.rs
matchmaker-lib/src/utils/: mod.rs  percentage.rs  seperator.rs  serde.rs  string.rs  text.rs  tokio.rs  types.rs
matchmaker-lib/tests/: derive_macro_test.rs
matchmaker-partial/: Cargo.toml  README.md
matchmaker-partial-macros/: Cargo.toml  README.md
matchmaker-partial-macros/src/: lib.rs
matchmaker-partial/src/: errors.rs  lib.rs  simple_de.rs  traits.rs
matchmaker-partial/tests/: macro_test.rs  map_test.rs  option_wrap.rs  penetration_test.rs  set_recurse_test.rs  simple_de_test.rs  unwrapped_leaf_test.rs
src/: action.rs  aliases.rs  binds.rs  config.rs  errors.rs  event.rs  lib.rs  matchmaker.rs  message.rs  noninteractive.rs  selection.rs  selector.rs  tui.rs
src/nucleo/: injector.rs  mod.rs  query.rs  variants.rs  worker.rs
src/preview/: mod.rs  previewer.rs  view.rs
src/proc/: io.rs  mod.rs  preview.rs  previewer.rs
src/render/: dynamic.rs  mod.rs  render.rs  state.rs  state_effects.rs
src/spawn/: mod.rs  preview.rs
src/ui/: ancillary.rs  display.rs  input.rs  mod.rs  overlay.rs  preview.rs  results.rs
src/utils/: mod.rs  percentage.rs  serde.rs  text.rs
