[workspace]
    resolver = "3"
    members = [
        "matchmaker-lib",
        "matchmaker-partial-macros",
        "matchmaker-cli",
        "matchmaker-partial",
    ]

[patch.crates-io]
    matchmaker-lib            = { path = "./matchmaker-lib" }
    matchmaker-partial        = { path = "./matchmaker-partial" }
    matchmaker-partial-macros = { path = "./matchmaker-partial-macros" }
    nucleo                    = { git = "https://github.com/Squirreljetpack/nucleo", branch = "mm" }

[workspace.dependencies]
    matchmaker-lib             = { version = "0.0.5" }
    matchmaker-partial         = { version = "0.0.5" }
    matchmaker-partial-macros  = { version = "0.0.5", default-features = false }
    cli_boilerplate_automation = { version = "0.0.*" }

[workspace.lints.clippy]
    single_match = "allow"
