[workspace]
resolver = "3"
members = [
    "matchmaker-cli",
    "matchmaker-lib",
    "matchmaker-partial",
    "matchmaker-partial-macros",
]

[patch.crates-io]
matchmaker-lib = { path = "./matchmaker-lib" }
matchmaker-partial = { path = "./matchmaker-partial" }
matchmaker-partial-macros = { path = "./matchmaker-partial-macros" }
nucleo = { git = "https://github.com/Squirreljetpack/nucleo", branch = "mm" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
cli_boilerplate_automation = { version = "0.*" }
matchmaker-lib = { version = "0.1.0" }
matchmaker-partial = { version = "0.0.*" }
matchmaker-partial-macros = { version = "0.0.*", default-features = false }

[workspace.lints.clippy]
single_match = "allow"
#
# [profile.release]
# opt-level = 0
# incremental = true
# codegen-units = 256
