[package]
name = "matchmaker-partial"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
matchmaker-partial-macros = { workspace = true }
toml = "0.9.8"

[[test]]
name = "derive_macro_test"
path = "tests/macro_test.rs"

[[test]]
name = "macro_optional_test"
path = "tests/option_wrap.rs"

